# midas-backend/public/swagger.json
@@ -302,6 +302,9 @@
 					"status": {
 						"type": "string"
 					},
+					"uploader_name": {
+						"type": "string"
+					},
 					"upload_url": {
 						"type": "string"
 					},
@@ -344,6 +347,7 @@
 					"name",
 					"title",
 					"status",
+					"uploader_name",
 					"upload_url",
 					"claim_id",
 					"claim",
@@ -471,16 +475,12 @@
 					"claim_id": {
 						"type": "number",
 						"format": "double"
-					},
-					"access_code": {
-						"type": "string"
 					}
 				},
 				"required": [
 					"name",
 					"email",
-					"claim_id",
-					"access_code"
+					"claim_id"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -503,13 +503,52 @@
 			},
 			"IDocumentPayload": {
 				"properties": {
+					"uploader_name": {
+						"type": "string"
+					},
 					"claim_id": {
 						"type": "number",
 						"format": "double"
 					}
 				},
 				"required": [
+					"uploader_name",
 					"claim_id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IS3Payload": {
+				"properties": {
+					"parent": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string"
+					},
+					"data": {
+						"items": {
+							"properties": {
+								"job_id": {
+									"type": "string"
+								},
+								"name": {
+									"type": "string"
+								}
+							},
+							"required": [
+								"job_id",
+								"name"
+							],
+							"type": "object"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"parent",
+					"type",
+					"data"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -525,16 +564,12 @@
 					"claim_id": {
 						"type": "number",
 						"format": "double"
-					},
-					"access_code": {
-						"type": "string"
 					}
 				},
 				"required": [
 					"name",
 					"email",
-					"claim_id",
-					"access_code"
+					"claim_id"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -1335,7 +1370,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "boolean"
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Client"
+										}
+									],
+									"nullable": true
 								}
 							}
 						}
@@ -1551,6 +1591,100 @@
 				]
 			}
 		},
+		"/documents/download/{id}": {
+			"get": {
+				"operationId": "DownloadDocument",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Document"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/documents/presignedUrl/{id}": {
+			"get": {
+				"operationId": "GenerateDocumentPresignedUrl",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Document"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/documents/bootstrap": {
+			"post": {
+				"operationId": "CreateS3Document",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Document"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IS3Payload"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/receivers": {
 			"get": {
 				"operationId": "GetReceivers",
@@ -1715,6 +1849,41 @@
 				]
 			}
 		},
+		"/receivers/claim/{id}": {
+			"get": {
+				"operationId": "GetReceiversByClaim",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Receiver"
+									},
+									"type": "array",
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Receiver"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/receivers/verify": {
 			"post": {
 				"operationId": "VerifyReceiver",
@@ -1724,7 +1893,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "boolean"
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Receiver"
+										}
+									],
+									"nullable": true
 								}
 							}
 						}
